Fixed button overlap

--- a/frontend/src/components/navigation/styles.css
+++ b/frontend/src/components/navigation/styles.css
@@ -8,7 +8,7 @@
     background-color: rgb(39, 38, 45);
     display: flex;
     flex-direction: column;
-
+    z-index: 2;
   }
   .content {
     position: absolute;
